improved swagger
