# components/sentry_test/sentry_test.controller.go
@@ -2,13 +2,14 @@ package sentrytest
 
 import "github.com/gin-gonic/gin"
 
-//	@Summary		Crashes the server and sends a report to Sentry
-//	@Description	Crash the server
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{string}	string	"ok"
-//	@Router			/crash [get]
+// @tags Sentry Test API
+// @Summary		Crashes the server and sends a report to Sentry
+// @Description	Crash the server
+// @Accept			json
+// @Produce		json
+// @Success		200	{string}	string	"ok"
+// @Router			/sentry/crash [get]
 func testCrash(context *gin.Context) {
-	context.String(200, "ok")
+	context.String(200, "crash successful")
 	panic("y tho")
 }
