# docs/swagger.json
@@ -1,44 +1,15 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "description": "This is an example for all api server projects in App Elevate",
+        "title": "APPE COREE example server",
+        "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/crash": {
-            "get": {
-                "description": "Crash the server",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Crashes the server and sends a report to Sentry",
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/db-example/user": {
+        "/db/user": {
             "post": {
                 "description": "create a user using post",
                 "consumes": [
@@ -46,6 +17,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "DB Example API"
                 ],
                 "summary": "Create a user",
                 "parameters": [
@@ -65,11 +39,25 @@
                         "schema": {
                             "$ref": "#/definitions/dbexample.UserGet"
                         }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
                     }
                 }
             }
         },
-        "/db-example/user/{name}": {
+        "/db/user/{name}": {
             "get": {
                 "description": "Get a User by name",
                 "consumes": [
@@ -77,6 +65,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "DB Example API"
                 ],
                 "summary": "Get a User by name",
                 "parameters": [
@@ -93,6 +84,63 @@
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/dbexample.UserGet"
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/health": {
+            "get": {
+                "description": "Crash the server",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health Check"
+                ],
+                "summary": "Health check for the server",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/sentry/crash": {
+            "get": {
+                "description": "Crash the server",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sentry Test API"
+                ],
+                "summary": "Crashes the server and sends a report to Sentry",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -135,13 +183,18 @@
             }
         }
     },
-    "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+    "tags": [
+        {
+            "description": "API for testing that the database is setup correctly",
+            "name": "DB Example API"
+        },
+        {
+            "description": "Api for testing Sentry is setup correctly",
+            "name": "Sentry Test API"
+        },
+        {
+            "description": "Health Check for this API",
+            "name": "Health Check"
         }
-    },
-    "externalDocs": {
-        "description": "OpenAPI",
-        "url": "https://swagger.io/resources/open-api/"
-    }
+    ]
 }
